
Fixed: Host header if IPv6 address is given in HTTP, APACHE-STATUS or WEBSOCKET protocol tests.

Fixed: Support M/Monit on IPv6 address.

Fixed: Issue #438: When "include /path/*" is used, silently ignore if there the directory is empty.

Fixed: Monit GUI: Set the encoding to UTF-8 to support UTF-8 formatted "check program" output.

Fixed: Network check on Solaris 10.


Version 5.19.0

New: Issue #421: Monit HTTP GUI: support for IPv6 added.

New: Monit HTTP GUI: it is now possible to listen both on TCP and unix sockets (previously it was
mutually exclusive).

New: Issue #380: apache-status protocol test: Added support for 'username' and 'password' options for
Basic authentication. Example:
 if failed port 80 protocol apache-status username myuser password 123456
        loglimit > 10% or
        dnslimit > 50%
 then alert

New: Add support for Basic authentication to the HTTP protocol test. Example:
 if failed port 80 protocol http username myuser password 123456 then alert

Fixed: apache-status protocol test: If the server returned an error (for example because authetication
is required and no credentials were set), provide the error code rather then confusing error message
"no scoreboard found".

Fixed: Issue #379: A linux system with lots of interrupts may disable process and system resource
checks.

Fixed: Issue #388: The service-local alert settings didn't override global "set alert" for the same
recipient properly.

Fixed: Issue #393: The $HOST in mail alert may be incorrect if FQDN hostname cannot be found.

Fixed: Issue #396: Disable CLI colors if the output is not tty.

Fixed: Issue #400: Clarify network tests documentation.

Fixed: Issue #403: If the sender address for monit alert was overriden by "set mail-format" statement,
don't try to resolve the hostname to FQDN.

Fixed: Issue #420: Monit doesn't check service on startup when "every X cycles" is used.

Fixed: Issue #428: Spelling fixes.

Fixed: Issue #431: Change charset in emails to UTF-8.
